refactor: Modernize controller layer